--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,28 +3,29 @@ name: Release
 on:
   push:
     tags:
-      - "v*" # Only triggered when a tag with 'v' prefix is pushed, e.g., v0.1.0
+      - "v*"
 
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
     permissions:
-      contents: write # This is required for creating releases
+      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Required for GoReleaser to generate changelogs
+          fetch-depth: 0
 
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: "1.24"
 
-      - name: Set up GoReleaser
+      - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v5
         with:
-          version: '~> v2'
+          version: "~> v2"
           args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TAP_GITHUB_TOKEN: ${{ secrets.HOMEBREW_TOKEN }}
